mz - small tweaks and typos

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -18,7 +18,7 @@ combinations of hyperparameter values specified and returns the best scoring mod
 and configuration to the user (for future use on other datasets).
 
 We present the design, implementation, and cost optimization for Seneca.
-The optimization automaticallly optimizes function memory use to reduce the cost
+The optimizer automaticallly optimizes function memory use to reduce the cost
 of AWS Lambda use.  Our empirical evaluation using
 multiple applications for regression and classification (using
 the models for prediction and not explanitory value), shows that Seneca is able to quickly
