mz - comments on related work

--- a/related_work.tex
+++ b/related_work.tex
@@ -11,8 +11,8 @@ Our work show that it is possible for the subset of machine learning application
 consider, to train models in a cost effective ways.
 
 %\cite{ref:baldini2017} identifies multiple open research questions surrounding serverless,
-including whether or not functions should be stateless. PyWren~\cite{ref:jonas2017occupy} provides us 
-a new perspective of stateless function being a natural fit for distributed computing models, because it 
+%including whether or not functions should be stateless. 
+PyWren~\cite{ref:jonas2017occupy} provides us a new perspective of stateless function being a natural fit for distributed computing models, because it 
 abstracts away cluster management overhead and is ideal for embarrassingly parallel jobs. 
 ExCamera~\cite{ref:encoding} presents a 
 framework for running general-purpose parallel tasks (encoding 4K video) 
