mz - close draft mode of hyperref

--- a/paper.tex
+++ b/paper.tex
@@ -54,7 +54,7 @@
 \usepackage{caption} %needed to make captions on figure* centered
 \graphicspath{{./figures/}}
 \DeclareGraphicsExtensions{.pdf,.png}
-\usepackage[draft]{hyperref}
+\usepackage[]{hyperref}
 
 
 
