mz - update figure III & IV

--- a/paper.tex
+++ b/paper.tex
@@ -252,9 +252,9 @@ Hyperparameter Search and Selection for Machine Learning Models}
 %\author{\IEEEauthorblockN{Michael Zhang, Chandra Krintz, Rich Wolski, Markus Mock}
 %\IEEEauthorblockA{Dept. of Computer Science \\
 %University of California, Santa Barbara\\
-%\{lebo, ckrintz, rich\}@cs.ucsb.edu}
+%\{lebo, ckrintz, rich, mock\}@cs.ucsb.edu}
 %}
-
+% Markus' email: mock@haw-landshut.de
 %\author{\IEEEauthorblockN{Omitted for Blind Review}%\\
 %\IEEEauthorblockA{Blind Review \\
 %Blind Review\\
