--- a/related_work.tex
+++ b/related_work.tex
@@ -4,7 +4,7 @@ on serverless computing and machine learning model optimization.
 Multiple researchers have investigated the efficacy and overhead of the
 serverless programming model and 
 implementations~\cite{ref:jonas2017occupy,ref:onesteptwostep, ref:baldini2017,ref:lin2018tracking}.
-The authors in \cite{ref:onesteptwostep} evaluates the cost and performance of using
+The authors in \cite{ref:onesteptwostep} evaluate the cost and performance of using
 serverless for data-intensive computing.  They identify some key weaknesses in AWS
 Lambda for this application domain including the inability to effectively train models.
 Our work show that it is possible for the subset of machine learning applications that we 
