--- a/paper.tex
+++ b/paper.tex
@@ -235,6 +235,15 @@
 
 % correct bad hyphenation here
 \hyphenation{Dev-Ops}
+\hyphenation{hyper-parameter}
+\hyphenation{hyper-parameterization}
+\hyphenation{exe-cution}
+\hyphenation{Celery}
+\hyphenation{app-lication}
+\hyphenation{classi-fication} 
+\hyphenation{ex-ploration}
+\hyphenation{models}
+\hyphenation{machine}
 
 
 \begin{document}
