--- a/results.tex
+++ b/results.tex
@@ -22,7 +22,7 @@ to evaluate Seneca.
 %paper submission is blind (so such references must be omitted so as not to reveal our identities):
 %Code base is available at project repository~\cite{ref:seneca}.
 \label{tab:bmarks}}
-%\vspace{-0.2in}
+\vspace{-0.2in}
 \end{table}
 
 In this section,
@@ -59,7 +59,7 @@ interval width & 0.8 & [0.5, 0.8] \\
 \caption{The hyperparameters that Seneca considers for Prophet. 
 The default value and tuning options are listed. 
 \label{tab:prophet_para}}
-\vspace{-0.2in}
+%\vspace{-0.2in}
 \end{table}
 
 \begin{table}[t]
@@ -79,7 +79,7 @@ The default value and tuning options are listed.
 \caption{The hyperparameters that Seneca considers for SVC. 
 The default value and tuning options are listed. 
 \label{tab:svc_para}}
-\vspace{-0.2in}
+%\vspace{-0.2in}
 \end{table}
 
 \begin{table}[t]
@@ -446,7 +446,7 @@ default for NN.
 We next analyze the monetary costs incurred by Seneca.  To do so, we
 use Seneca to find the hyperparameterization that optimizes application output
 quality (lowest MSE for regression, highest accuracy for classification).
-For each hyperparameteriyation that Seneca evaluates, it incurs a
+For each hyperparameterization that Seneca evaluates, it incurs a
 cost. Furthermore, the amount of memory used by Seneca during memory
 tuning also influeces overall cost.
 
