mz - spell check

--- a/Seneca.tex
+++ b/Seneca.tex
@@ -154,7 +154,7 @@ Define deques for allocated memory \& compute charge\;
 For parallel function invocation, Seneca integrates 
 Celery~\cite{ref:celery}. Celery is an asynchronous task queue 
 that uses distributed message passing. Celery workers are processes 
-that take tasks from the queue, execute the tasks with the auguments specified, 
+that take tasks from the queue, execute the tasks with the arguments specified, 
 and store the result that is returned 
 in a database (we use Redis~\cite{ref:redis} in our prototype). 
 
