--- a/hparams-svc-tab.tex
+++ b/hparams-svc-tab.tex
@@ -3,27 +3,27 @@
 \hline
 \textbf{Hyperparameter}& \textbf{Default} & \textbf{Tuning options}\\
 \hline
-C & 1 & [0.5, 1.0, 2.0] \\
+C & 1.0 & [0.5, 2.0] \\
 \hline
-kernel & rbf & [rbf,linear,poly,sigmoid] \\
+kernel & rbf & [rbf, linear, poly, sigmoid] \\
 \hline
-degree & 3 & [2,3,4] \\
+degree & 3 & [2, 4] \\
 \hline
-gamma & auto& [auto,scale] \\
+gamma & auto& [auto, scale] \\
 \hline
-coef0 init & 0.0 & [-0.5,0.0,0.5] \\
+coef0 init & 0.0 & [-0.5, 0.5] \\
 \hline
 %shrink & True & [True] \\
 %\hline
-prob & False& [False,True] \\
+probability & False & [False, True] \\
 \hline
-tol & 1e-3& [1e-2,1e-3,1e-4] \\
+tol & 1e-3& [1e-2, 1e-4] \\
 \hline
 %cache & 5.0& [5.0] \\
 %\hline
 %max iter & 20 & 20 \\
 %\hline
-dec shape & ovr& [ovo,ovr] \\
+decision function shape & ovr & [ovo, ovr] \\
 \hline
 %random state & 123& [123] \\
 %\hline
