--- a/hparams-nn-tab.tex
+++ b/hparams-nn-tab.tex
@@ -5,19 +5,19 @@
 \hline
 %hidden layer size & 100 & [100] \\
 %\hline
-activation & relu & [id,tanh,relu] \\
+activation & relu & [identity, tanh, relu] \\
 \hline
-solver & adam & [lbfgs,sgd,adam] \\
+solver & adam & [lbfgs, sgd, adam] \\
 %\hline
 %alpha & 0.0001 & [0.0001] \\
+%\hline
+%batch size & auto & [200,auto] \\
 \hline
-batch size & auto & [200,auto] \\
+learning rate & constant & [constant, invscaling, adaptive] \\
 \hline
-rate & const& [const,invsc,adapt ] \\
+learning rate init & 0.001 & [0.001, 0.0001] \\
 \hline
-rate init & 0.001 & [0.001,0.0001] \\
-\hline
-power T & 0.05 & [0.1,0.5,2] \\
+power T & 0.05 & [0.1, 2] \\
 %\hline
 %max iter & 20& [20] \\
 %\hline
@@ -25,7 +25,7 @@ power T & 0.05 & [0.1,0.5,2] \\
 %\hline
 %random & 123& [123] \\
 \hline
-tol & 1-e4& [1e-3,1-e4,1-e5] \\
+tol & 1-e4 & [1e-3, 1-e5] \\
 %\hline
 %momentum & 0.9& [0.9] \\
 %\hline
@@ -37,6 +37,6 @@ tol & 1-e4& [1e-3,1-e4,1-e5] \\
 %\hline
 %epsilon & 1e-8& [1e-8] \\
 \hline
-iter nchange & 10& [5,10,20] \\
+n iter no change & 10 & [5, 20] \\
 \hline
 \end{tabular}
