--- a/hparams-xgboost-tab.tex
+++ b/hparams-xgboost-tab.tex
@@ -5,33 +5,33 @@
 \hline
 %hidden layer size & 100 & [100] \\
 %\hline
-max depth & 3 & [2,3,4]\\
+max depth & 3 & [2, 4]\\
 \hline
-learn rate & 0.1 & [0.1,0.01] \\
+learning rate & 0.1 & [0.1, 0.01] \\
 \hline
-N est & 100 & [100,300,400] \\
+N estimators & 100 & [300, 400] \\
 \hline
-obj & reg:linear & [reg:linear,rank:pair] \\
+objective & reg:linear & [reg:linear, rank:pairwise] \\
 \hline
-booster &gbtree& [gbtree,gblinear,dart] \\
+booster & gbtree & [gbtree, gblinear, dart] \\
+%\hline
+%n jobs & 1 & [1,4]\\
+%\hline
+%gamma & 0 & [0,0.01] \\
 \hline
-n jobs & 1& [1,4]\\
+min child weight & 1 & [0.1, 2] \\
 \hline
-gamma & 0 & [0,0.01] \\
+scale positive weight & 1& [0.1, 2] \\
+%\hline
+%sample tree & 1& [0.2,0.5,1]\\
+%\hline
+%samp level & 1& [0.2,0.5,1]\\
+%\hline
+%ralpha & 0& [0.0.1,0.9] \\
+%\hline
+%rlambda & 1& [0.1,0.9,1] \\
 \hline
-min childwt & 1& [0.1,1,2] \\
-\hline
-scale poswt & 1& [0.1,1,2] \\
-\hline
-samp tree & 1& [0.2,0.5,1]\\
-\hline
-samp level & 1& [0.2,0.5,1]\\
-\hline
-ralpha & 0& [0.0.1,0.9] \\
-\hline
-rlambda & 1& [0.1,0.9,1] \\
-\hline
-base score & 0.5& [0.5,1,10] \\
+base score & 0.5 & [1, 10] \\
 \hline
 %random state & 123& [123] \\
 %\hline
